// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityArchetypeHeading fallbacks renders component in third person 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        src="https://cdn.traitify.com/icons/big-five/paradox-blue/cohort.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          {
            "__html": "Big Five Personality: <span>Cohort</span>",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      Cohorts are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, this candidate may worry about how they are being perceived by others and want to manage their reputation.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort_thumb.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/paradox-archetype-videos/CohortV2.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading fallbacks renders component without badge 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <div
        className="heading"
        dangerouslySetInnerHTML={
          {
            "__html": "Big Five Personality: <span>Cohort</span>",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      Cohorts are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, this candidate may worry about how they are being perceived by others and want to manage their reputation.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort_thumb.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/paradox-archetype-videos/CohortV2.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading fallbacks renders component without video 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        src="https://cdn.traitify.com/icons/big-five/paradox-blue/cohort.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          {
            "__html": "Big Five Personality: <span>Cohort</span>",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      Cohorts are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, this candidate may worry about how they are being perceived by others and want to manage their reputation.
    </div>
  </div>
  <div
    className="meaning"
  >
    <p
      dangerouslySetInnerHTML={
        {
          "__html": "This assessment helps you understand the components of your personality. Just as our bodies are composed of different organ systems, we can think of our personalities as having separate, equally important parts.<br /><br />Although we might feel and behave a little differently from one day to the next, or even from one situation to the next, we all typically display higher or lower levels of five core dimensions. All five dimensions shape who we are, just like all the parts of our bodies work together to keep us healthy.",
        }
      }
    />
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading renders component 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        src="https://cdn.traitify.com/icons/big-five/paradox-blue/cohort.png"
      />
      <div
        className="heading"
        dangerouslySetInnerHTML={
          {
            "__html": "Your Big Five Personality is <span>Cohort</span>",
          }
        }
      />
    </div>
    <div
      className="p"
    >
      You are up for trying novel tasks and considering new ideas. Steady and content with focusing attention on multiple projects at once, you may worry about how you are being perceived by others and want to manage your reputation.
    </div>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort_thumb.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/paradox-archetype-videos/CohortV2.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/paradox-archetype-videos/Cohort.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading renders nothing if deck not ready 1`] = `null`;

exports[`PersonalityArchetypeHeading renders nothing if disabled 1`] = `null`;

exports[`PersonalityArchetypeHeading renders nothing if no archetype 1`] = `null`;

exports[`PersonalityArchetypeHeading renders nothing if results not ready 1`] = `null`;
